--- a/backend/pubspec.yaml
+++ b/backend/pubspec.yaml
@@ -9,6 +9,15 @@ environment:
 # dependencies:
 #   path: ^1.8.0
 
+dependencies:
+  postgresql2: ^1.0.4
+  redis: ^3.1.0
+  result_dart: ^1.0.5
+  shelf: ^1.4.0
+  shelf_modular: ^2.1.0
+  uno: ^1.0.1+5
+
 dev_dependencies:
   lints: ^2.0.0
+  mocktail: ^0.3.0
   test: ^1.21.0
