--- a/backend/pubspec.yaml
+++ b/backend/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   uno: ^1.0.1+5
 
 dev_dependencies:
+  flutterando_analysis: ^0.0.2
   lints: ^2.0.0
   mocktail: ^0.3.0
   test: ^1.21.0
